--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,3 +50,26 @@ p{
         color: white;
         font-size: 10px;
  }
+
+ .contact-group{
+     width: 600px;
+     margin: auto;
+     margin-top: 20px;
+     padding: 20px;
+     background-color: white;
+     border: solid 1px darkgrey;
+     
+ }
+
+ h2{
+     color: teal;
+ }
+
+ .button{
+    background: #4aaaa5;
+    color: white;
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    padding: 10px 15px 10px 15px;    
+}
